--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 
   <!-- Main Content -->
   <main>
+    <section class="most-colorful container">
+      <p class="colorful-top">Discover the</p>
+      <p class="colorful-middle">MOST<br>COLORFUL</p>
+      <p class="colorful-bottom">Chocolate</p>
+    </section>
     <section class="slides-wrapper container">
       <div class="slides">
         <div class="slide-1">
@@ -65,6 +70,13 @@
         </div>
 
       </div>
+    </section>
+    <section class="secret-slogan container">
+      <p class="secret-top">OUR SECRET</p>
+      <p class="secret-bottom">THE BEST<br>INGREDIENTS</p>
+    </section>
+    <section class="secret-description container">
+      <p class="description-text">What does it need to make really good chocolate? The best ingredients, recipes reduced to the essentials, produced in harmony with people and nature. It is our claim that each variety is the best in its category – and always a real pleasure to bite into!</p>
     </section>
     <section class="suppliers container">
 
@@ -138,6 +150,68 @@
           </div>
         </div>
       </div>
+    </section>
+    <section class="book-tour container">
+      <h2 class="book-title">Get a ticket</h2>
+      <p class="book-slogan">Check the quality by your own</p>
+    <div class="form-container">
+      <form action="" class="contact__form" id="contact-form">
+  
+        <div class="contact-group">
+          <div class="contact-box">
+            <label for="fname" class="contact-label">First Name:</label>
+            <input type="text" name="user-fname" class="contact-input" id="fname" required placeholder="First Name">
+          </div>
+  
+          <div class="contact-box">
+            <label for="lname" class="contact-label">Last Name:</label>
+            <input type="text" name="user-lname" class="contact-input" id="lname" required placeholder="Last Name">
+          </div>
+        </div>
+  
+        <div class="contact-group">
+          <div class="contact-box">
+            <label for="user_email" class="contact-label">Email:</label>
+            <input type="text" name="user_email" class="contact-input" id="email" required placeholder="ritter@gmail.com">
+          </div>
+  
+          <div class="contact-box">
+            <label for="phone" class="contact-label">Phone:</label>
+            <input type="text" name="phone" class="contact-input" id="phone" required placeholder="4374332421">
+          </div>
+        </div>
+  
+        <div class="contact-group">
+          <div class="contact-box">
+            <label for="time" class="contact-label">Time:</label>
+            <select name="time" id="time" class="time" required>
+              <option value="09:00">9 AM</option>
+              <option value="12:00">12 PM</option>
+              <option value="15:00">3 PM</option>
+            </select>
+          </div>
+  
+          <div class="contact-box">
+            <label for="date" class="contact-label">Date:</label>
+            <input type="date" name="user-date" class="contact-input" id="date" required placeholder="Date Of Order">
+          </div>
+  
+          <div class="location-option">
+            <label for="location" class="contact-label">Location:</label>
+            <select name="location" id="location" class="location" required>
+              <option value="economy">Economy</option>
+              <option value="comfort">Comfort</option>
+              <option value="royal">Royal</option>
+            </select>
+          </div>
+        </div>
+        <p class="contact-message" id="contact-message"></p>
+  
+        <button type="submit" class="contact-button button">
+          <i class="ri-send-plane-line"></i> Get a ticket
+        </button>
+      </form>
+    </div>
     </section>
   </main>
 
