--- a/index.html
+++ b/index.html
@@ -10,7 +10,28 @@
 <body>
 
   <!-- Header -->
-  <header></header>
+  <header class="header">
+    <div class="header-box container">
+      <img src="img/logo.png" alt="">
+      <nav class="navigation">
+        <ul class="navigation-list">
+          <li class="navigation-list__item">
+            <a href="#our-chocolate" class="navigation-link">OUR CHOCOLATE</a>
+          </li>
+          <li class="navigation-list__item">
+            <a href="#our-ingredients" class="navigation-link">OUR INGREDIENTS</a>
+          </li>
+          <li class="navigation-list__item">
+            <a href="#" class="navigation-link">ABOUT US</a>
+          </li>
+          <li class="navigation-list__item">
+            <a href="#contact-us" class="navigation-link">CONTACT US</a>
+          </li>
+        </ul>
+      </nav>
+      <a href="#visit-us" class="header-link">VISIT US</a>
+    </div>
+  </header>
 
   <!-- Main Content -->
   <main>
@@ -19,7 +40,7 @@
       <p class="colorful-middle">MOST<br>COLORFUL</p>
       <p class="colorful-bottom">Chocolate</p>
     </section>
-    <section class="slides-wrapper container">
+    <section class="slides-wrapper container" id="our-chocolate">
       <div class="slides">
         <div class="slide-1">
           <h2 class="left-top-name">CRISPY</h2>
@@ -71,7 +92,7 @@
 
       </div>
     </section>
-    <section class="secret-slogan container">
+    <section class="secret-slogan container" id="our-ingredients">
       <p class="secret-top">OUR SECRET</p>
       <p class="secret-bottom">THE BEST<br>INGREDIENTS</p>
     </section>
@@ -151,7 +172,7 @@
         </div>
       </div>
     </section>
-    <section class="book-tour container">
+    <section class="book-tour container" id="visit-us">
       <h2 class="book-title">Get a ticket</h2>
       <p class="book-slogan">Check the quality by your own</p>
       <div class="form-container">
