--- a/index.html
+++ b/index.html
@@ -233,7 +233,23 @@
   </main>
 
   <!-- Footer -->
-  <footer></footer>
+  <footer class="main-footer">
+    <div class="social">
+      <ul class="social-list">
+        <li><a href=""><img src="img/twitter.svg" alt="Twitter"></a></li>
+        <li><a href=""><img src="img/instagram.svg" alt="Instagram"></a></li>
+        <li><a href=""><img src="img/linkedin.svg" alt="Linkedin"></a></li>
+      </ul>
+    </div>
+    <div class="copyright">
+      <img src="img/logo.png" alt="Logo RitterSport">
+      <p class="ritter">&copy; RITTERSPORT 2024</p>
+      <p>Quadratisch. Praktisch. Gut.</p>
+    </div>
+    <div class="email">
+      <p>info@ritter-sport.de</p>
+    </div>
+  </footer>
 
 </body>
 </html>
